# microblip

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  memory.x  release.json
.cargo/: config.toml
.github/workflows/: build.yaml  convention.yaml  lint.yaml  release.yaml
src/: main.rs
src/tasks/: display.rs  microphone.rs  mod.rs
