[package]
name = "microblip"
version = "1.1.0"
edition = "2024"

[dependencies]

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.1.1"
defmt-rtt = "1.3.0"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-futures = { version = "0.1.1", default-features = false }
embassy-sync = { version = "0.7.0", default-features = false }
embassy-executor = { version = "0.7.0", default-features = false, features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.4.0", default-features = false, features = [
    "defmt-timestamp-uptime",
    "defmt",
] }

microbit-bsp = "0.4.0"

[profile.release]
debug = 2
